--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ language: ruby
 rvm:
   - 2.5.1
 before_install: gem install bundler -v 1.16.3
+before_script:
+  - RAILS_ENV=test bundle exec rake db:create db:migrate
