--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ rvm:
   - 2.5.1
 before_install: gem install bundler -v 1.16.3
 before_script:
+  - cp config/database.example.yml config/database.yml
   - RAILS_ENV=test bundle exec rake db:create db:migrate
